[gd_scene load_steps=27 format=2]

[ext_resource path="res://MixingSpace.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://ElementScenes/Fire.tscn" type="PackedScene" id=3]
[ext_resource path="res://ElementScenes/Air.tscn" type="PackedScene" id=4]
[ext_resource path="res://ElementScenes/Bottle.tscn" type="PackedScene" id=5]
[ext_resource path="res://ElementScenes/Steam.tscn" type="PackedScene" id=6]
[ext_resource path="res://ElementScenes/Water.tscn" type="PackedScene" id=7]
[ext_resource path="res://ElementScenes/Earth.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/mixing_dish.png" type="Texture" id=9]
[ext_resource path="res://Assets/1440px-Laboratorium-biologia-molekularna.jpg" type="Texture" id=10]
[ext_resource path="res://ElementScenes/Glass.tscn" type="PackedScene" id=11]
[ext_resource path="res://ElementScenes/BottleStorm.tscn" type="PackedScene" id=12]
[ext_resource path="res://ElementScenes/Plant.tscn" type="PackedScene" id=13]
[ext_resource path="res://ElementScenes/Sand.tscn" type="PackedScene" id=14]
[ext_resource path="res://ElementScenes/Coal.tscn" type="PackedScene" id=15]
[ext_resource path="res://ElementScenes/Storm.tscn" type="PackedScene" id=16]
[ext_resource path="res://ElementScenes/BottleWater.tscn" type="PackedScene" id=17]
[ext_resource path="res://ElementScenes/Metal.tscn" type="PackedScene" id=18]
[ext_resource path="res://ElementScenes/Diamond.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/Optimus.otf" type="DynamicFontData" id=20]
[ext_resource path="res://Notebook.gd" type="Script" id=21]
[ext_resource path="res://Assets/element icons/steam.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 20 )

[node name="Level1" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 520.997, 314.844 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
rotation = 1.5708
current = true

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MixingSpace" type="ColorRect" parent="UI"]
visible = false
margin_right = 512.0
margin_bottom = 600.0
color = Color( 0.419608, 0.419608, 0.419608, 0.905882 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MixButton" type="Button" parent="UI/MixingSpace"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -60.0
margin_right = 45.0
margin_bottom = -20.0
text = "Mix!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MixingSpot1" type="Sprite" parent="UI/MixingSpace"]
position = Vector2( 128, 455 )
texture = ExtResource( 9 )

[node name="MixingSpot2" type="Sprite" parent="UI/MixingSpace"]
position = Vector2( 384, 455 )
texture = ExtResource( 9 )

[node name="Water" parent="UI/MixingSpace" instance=ExtResource( 7 )]
position = Vector2( 85.0708, 44.8969 )

[node name="Fire" parent="UI/MixingSpace" instance=ExtResource( 3 )]
position = Vector2( 39.464, 44.5211 )

[node name="Earth" parent="UI/MixingSpace" instance=ExtResource( 8 )]
visible = false
position = Vector2( 135.129, 47.4961 )

[node name="Air" parent="UI/MixingSpace" instance=ExtResource( 4 )]
visible = false
position = Vector2( 184.924, 45.3772 )

[node name="Steam" parent="UI/MixingSpace" instance=ExtResource( 6 )]
visible = false
position = Vector2( 39.8799, 109.772 )

[node name="Bottle" parent="UI/MixingSpace" instance=ExtResource( 5 )]
visible = false
position = Vector2( 36.5991, 226.545 )

[node name="BottleWater" parent="UI/MixingSpace" instance=ExtResource( 17 )]
visible = false
position = Vector2( 36.5991, 285.875 )

[node name="BottleStorm" parent="UI/MixingSpace" instance=ExtResource( 12 )]
visible = false
position = Vector2( 85.3344, 280.578 )

[node name="Diamond" parent="UI/MixingSpace" instance=ExtResource( 19 )]
visible = false
position = Vector2( 86.3938, 225.486 )

[node name="Glass" parent="UI/MixingSpace" instance=ExtResource( 11 )]
visible = false
position = Vector2( 86.3938, 172.513 )

[node name="Plant" parent="UI/MixingSpace" instance=ExtResource( 13 )]
visible = false
position = Vector2( 231.54, 113.183 )

[node name="Storm" parent="UI/MixingSpace" instance=ExtResource( 16 )]
visible = false
position = Vector2( 131.951, 114.242 )

[node name="Metal" parent="UI/MixingSpace" instance=ExtResource( 18 )]
visible = false
position = Vector2( 182.805, 112.123 )

[node name="Sand" parent="UI/MixingSpace" instance=ExtResource( 14 )]
visible = false
position = Vector2( 83.2155, 111.064 )

[node name="Coal" parent="UI/MixingSpace" instance=ExtResource( 15 )]
visible = false
position = Vector2( 36.5991, 173.572 )

[node name="Notebook" type="ColorRect" parent="UI"]
visible = false
margin_right = 512.0
margin_bottom = 600.0
color = Color( 0.419608, 0.419608, 0.419608, 0.905882 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteamRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -260.0
margin_right = -116.0
margin_bottom = -237.0
custom_fonts/font = SubResource( 1 )
text = "Steam = Fire + Water"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StormRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -230.0
margin_right = -30.0
margin_bottom = -207.0
custom_fonts/font = SubResource( 1 )
text = "Storm = Water + Air"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlantRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -200.0
margin_right = -30.0
margin_bottom = -177.0
custom_fonts/font = SubResource( 1 )
text = "Plant = Water + Earth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SandRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -170.0
margin_right = -26.0
margin_bottom = -147.0
custom_fonts/font = SubResource( 1 )
text = "Sand = Air + Earth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -140.0
margin_right = -26.0
margin_bottom = -117.0
custom_fonts/font = SubResource( 1 )
text = "Metal = Fire + Earth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlassRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -110.0
margin_right = -26.0
margin_bottom = -87.0
custom_fonts/font = SubResource( 1 )
text = "Glass = Fire + Sand"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoalRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -80.0
margin_right = -26.0
margin_bottom = -57.0
custom_fonts/font = SubResource( 1 )
text = "Coal = Fire + Plant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottleRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -50.0
margin_right = -26.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 1 )
text = "Bottle = Fire + Glass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiamondRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -20.0
margin_right = -19.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
text = "Diamond = Earth + Coal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottleWaterRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = 10.0
margin_right = 58.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Bottled Water = Bottle + Water"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottleStormRecipe" type="Label" parent="UI/Notebook"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = 40.0
margin_right = -19.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "Bottled Storm = Bottle + Storm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowMixingSpace" type="Button" parent="UI"]
margin_left = 700.0
margin_top = 200.0
custom_fonts/font = SubResource( 2 )
text = "Show Mixing Space"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Show Notebook" type="Button" parent="UI"]
margin_left = 700.0
margin_top = 300.0
margin_right = 844.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 3 )
text = "Show Notebook"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="UI"]
margin_left = 700.0
margin_top = 400.0
margin_right = 811.0
margin_bottom = 420.0
custom_fonts/font = SubResource( 4 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_left = 883.941
margin_top = 135.546
margin_right = 1008.94
margin_bottom = 175.546
color = Color( 0.384314, 0.384314, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mixing_dish" type="Sprite" parent="UI/ColorRect"]
position = Vector2( 61.6778, -64.7417 )
texture = ExtResource( 9 )

[node name="steam" type="Sprite" parent="UI/ColorRect"]
position = Vector2( 60.6183, -65.8012 )
scale = Vector2( 2, 2 )
texture = ExtResource( 22 )

[node name="TurnCounter" type="Label" parent="UI/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -11.5
margin_right = 50.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 1 )
text = "Turns left: "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/MixingSpace/MixButton" to="UI/MixingSpace" method="_on_MixButton_pressed"]
[connection signal="pressed" from="UI/ShowMixingSpace" to="UI" method="_on_ShowMixingSpace_pressed"]
[connection signal="pressed" from="UI/Show Notebook" to="UI" method="_on_Show_Notebook_pressed"]
[connection signal="pressed" from="UI/Submit" to="UI" method="_on_Submit_pressed"]
